Add missing pkg-config deps.
git-svn-id: http://svn.drobilla.net/lad/trunk/sratom@4097 a436a847-0d15-0410-975c-d299462d15a1

--- a/sratom.pc.in
+++ b/sratom.pc.in
@@ -6,6 +6,6 @@ includedir=@INCLUDEDIR@
 Name: Sratom
 Version: @SRATOM_VERSION@
 Description: LV2 Atom RDF serialisation library
-Requires: serd-0 sord-0
+Requires: serd-0 sord-0 lv2-lv2plug.in-ns-ext-atom lv2-lv2plug.in-ns-ext-urid
 Libs: -L${libdir} -lsratom-@SRATOM_MAJOR_VERSION@
 Cflags: -I${includedir}/sratom-@SRATOM_MAJOR_VERSION@
