Support building against parallel debuggable libraries via pkg-config.
git-svn-id: http://svn.drobilla.net/lad/trunk/sratom@4766 a436a847-0d15-0410-975c-d299462d15a1

--- a/sratom.pc.in
+++ b/sratom.pc.in
@@ -6,6 +6,6 @@ includedir=@INCLUDEDIR@
 Name: Sratom
 Version: @SRATOM_VERSION@
 Description: LV2 Atom RDF serialisation library
-Requires: serd-0 sord-0 lv2
-Libs: -L${libdir} -lsratom-@SRATOM_MAJOR_VERSION@
+Requires: lv2 @PKG_serd_0@ @PKG_sord_0@
+Libs: -L${libdir} -l@LIB_SRATOM@
 Cflags: -I${includedir}/sratom-@SRATOM_MAJOR_VERSION@
