--- a/doc/reference.doxygen.in
+++ b/doc/reference.doxygen.in
@@ -797,7 +797,7 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @SRATOM_SRCDIR@/sratom/sratom.h \
+INPUT                  = @SRATOM_SRCDIR@/include/sratom/sratom.h \
                          @SRATOM_SRCDIR@/doc/mainpage.md
 
 # This tag can be used to specify the character encoding of the source files
