WIP: Port to serd1 and rework API

--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -18,16 +18,16 @@ _opaque = [
     "LV2_Atom_Forge",
     "LV2_Atom_Forge_Ref",
     "LV2_Atom_Forge_Sink_Handle",
+    "LV2_URID",
     "LV2_URID_Map",
     "LV2_URID_Unmap",
-    "SerdEndSink",
     "SerdEnv",
+    "SerdModel",
     "SerdNode",
-    "SerdStatementSink",
-    "SordModel",
-    "SordNode",
-    "SordWorld",
-    "SratomImpl",
+    "SerdSink",
+    "SerdWorld",
+    "SratomDumperImpl",
+    "SratomLoaderImpl",
     "uint32_t",
 ]
 
