--- a/doc/meson.build
+++ b/doc/meson.build
@@ -10,7 +10,7 @@ if build_docs
   subdir('c')
 endif
 
-if meson.version().version_compare('>=0.53.0')
+if not meson.is_subproject() and meson.version().version_compare('>=0.53.0')
   summary('Documentation', build_docs, bool_yn: true)
 endif
 
