--- a/sratom.pc.in
+++ b/sratom.pc.in
@@ -5,7 +5,7 @@ includedir=@INCLUDEDIR@
 
 Name: Sratom
 Version: @SRATOM_VERSION@
-Description: LV2 Atom RDF serialisation library
+Description: Small library for serializing LV2 atoms
 Requires: @SRATOM_PKG_DEPS@
 Libs: -L${libdir} -l@LIB_SRATOM@
 Cflags: -I${includedir}/sratom-@SRATOM_MAJOR_VERSION@
