--- a/test/meson.build
+++ b/test/meson.build
@@ -5,21 +5,22 @@
 # Project Metadata #
 ####################
 
-
-# Check release metadata
-if not meson.is_subproject() and get_option('strict')
-  autoship = find_program('autoship', required: false)
-  if autoship.found()
-    test('autoship', autoship, args: ['test', sratom_src_root], suite: 'data')
+if get_option('strict')
+  # Check release metadata
+  if not meson.is_subproject()
+    autoship = find_program('autoship', required: false)
+    if autoship.found()
+      test('autoship', autoship, args: ['test', sratom_src_root], suite: 'data')
+    endif
   endif
-endif
 
-# Check licensing metadata
-reuse = find_program('reuse', required: false)
-if reuse.found()
-  test('REUSE', reuse,
-       args: ['--root', sratom_src_root, 'lint'],
-       suite: 'data')
+  # Check licensing metadata
+  reuse = find_program('reuse', required: false)
+  if reuse.found()
+    test('REUSE', reuse,
+         args: ['--root', sratom_src_root, 'lint'],
+         suite: 'data')
+  endif
 endif
 
 ##############
