Test header for warnings more strictly

--- a/test/meson.build
+++ b/test/meson.build
@@ -23,6 +23,12 @@ if get_option('strict')
   endif
 endif
 
+###################
+# Header Warnings #
+###################
+
+subdir('headers')
+
 ##############
 # Unit Tests #
 ##############
