Explicitly specify all documentation dependencies
Yet another attempt to sort out flaky documentation builds.  This tries to be
careful and describe the complete documentation dependency graph to meson
explicitly (ignoring tool outputs that aren't used).  Also remove the shared
doctrees directory option, since I suspect this causes issues in parallel
builds.

--- a/doc/api/meson.build
+++ b/doc/api/meson.build
@@ -1,9 +1,9 @@
 # Copyright 2020-2023 David Robillard <d@drobilla.net>
 # SPDX-License-Identifier: 0BSD OR ISC
 
-c_sratom_rst = custom_target(
+api_sratom_rst = custom_target(
   'sratom.rst',
   command: [sphinxygen, '-f', '@INPUT0@', '@OUTDIR@'],
-  input: [c_index_xml],
+  input: doxygen_xml,
   output: 'sratom.rst',
 )
