--- a/test/meson.build
+++ b/test/meson.build
@@ -11,29 +11,27 @@ subdir('headers')
 # Unit Tests #
 ##############
 
-unit_tests = [
-  'sratom',
-]
+test_sratom_source = files('test_sratom.c')
 
-foreach unit : unit_tests
-  test(
-    unit,
-    executable(
-      'test_@0@'.format(unit),
-      files('test_@0@.c'.format(unit)),
-      c_args: c_suppressions,
-      dependencies: [sratom_dep, serd_dep, sord_dep],
-      include_directories: include_directories('../src'),
-    ),
-    suite: 'unit',
-  )
-endforeach
+test(
+  'sratom',
+  executable(
+    'test_sratom',
+    test_sratom_source,
+    c_args: c_suppressions,
+    dependencies: [sratom_dep, serd_dep, sord_dep],
+    include_directories: include_directories('../src'),
+  ),
+  suite: 'unit',
+)
 
 ########
 # Lint #
 ########
 
 if get_option('lint')
+  all_sources = sources + test_sratom_source + test_headers_source
+
   if not meson.is_subproject()
     # Check release metadata
     autoship = find_program('autoship', required: false)
@@ -47,5 +45,12 @@ if get_option('lint')
   if reuse.found()
     reuse_args = ['--root', sratom_src_root, 'lint']
     test('REUSE', reuse, args: reuse_args, suite: 'data')
+  endif
+
+  # Check code formatting
+  clang_format = find_program('clang-format', required: false)
+  if clang_format.found()
+    clang_format_args = ['--Werror', '--dry-run'] + c_headers + all_sources
+    test('format', clang_format, args: clang_format_args, suite: 'code')
   endif
 endif
