Use "system" includes for dependencies and strengthen header test
Things get confused when these flags differ across projects, so universally
use "system" for external dependencies and test for header warnings only in
the project that owns them.

With this, we can remove all the suppressions that actually come from other
projects and so can't be resolved here anyway.

--- a/test/headers/meson.build
+++ b/test/headers/meson.build
@@ -5,34 +5,10 @@ header_c_suppressions = []
 
 if get_option('warning_level') == 'everything'
   if cc.get_id() == 'clang'
-    header_c_suppressions += [
-      '-Wno-cast-align', # LV2
-      '-Wno-cast-qual', # LV2
-      '-Wno-declaration-after-statement', # LV2
-      '-Wno-documentation-unknown-command', # LV2
-      '-Wno-padded', # LV2, serd
-      '-Wno-poison-system-directories',
-      '-Wno-unsafe-buffer-usage', # LV2
-    ]
-  elif cc.get_id() == 'gcc'
-    header_c_suppressions += [
-      '-Wno-cast-align', # LV2
-      '-Wno-cast-qual', # LV2
-      '-Wno-padded', # Serd
-      '-Wno-sign-conversion', # LV2
-      '-Wno-unused-const-variable', # Serd
-    ]
-  elif cc.get_id() == 'msvc'
-    header_c_suppressions += [
-      '/wd4820', # padding added after construct
-    ]
-  endif
-endif
-
-if cc.get_id() == 'clang'
-  header_c_suppressions += [
-    '-Wno-nullability-extension',
-  ]
+    if not meson.is_cross_build()
+      c_suppressions += ['-Wno-poison-system-directories']
+    endif
+ endif
 endif
 
 header_c_suppressions = cc.get_supported_arguments(header_c_suppressions)
