Avoid using fallback for dependencies without a subproject
This screws things up with older meson versions, particularly with include_type
'system'.  I don't think it had any purpose since there's no corresponding
subproject inside this one anyway.

--- a/meson.build
+++ b/meson.build
@@ -119,26 +119,9 @@ c_suppressions = cc.get_supported_arguments(c_suppressions)
 
 m_dep = cc.find_library('m', required: false)
 
-serd_dep = dependency(
-  'serd-0',
-  fallback: 'serd',
-  include_type: 'system',
-  version: '>= 0.30.10',
-)
-
-sord_dep = dependency(
-  'sord-0',
-  fallback: 'sord',
-  include_type: 'system',
-  version: '>= 0.16.16',
-)
-
-lv2_dep = dependency(
-  'lv2',
-  fallback: 'lv2',
-  include_type: 'system',
-  version: '>= 1.18.4',
-)
+serd_dep = dependency('serd-0', include_type: 'system', version: '>= 0.30.10')
+sord_dep = dependency('sord-0', include_type: 'system', version: '>= 0.16.16')
+lv2_dep = dependency('lv2', include_type: 'system', version: '>= 1.18.4')
 
 ##########################
 # Platform Configuration #
