Fix header test build on MacOS

--- a/test/headers/meson.build
+++ b/test/headers/meson.build
@@ -6,8 +6,9 @@ header_c_suppressions = []
 if get_option('warning_level') == 'everything'
   if cc.get_id() == 'clang'
     if not meson.is_cross_build()
-      c_suppressions += ['-Wno-poison-system-directories']
+      header_c_suppressions += ['-Wno-poison-system-directories']
     endif
+    header_c_suppressions += ['-Wno-poison-system-directories']
   elif cc.get_id() == 'msvc'
     header_c_suppressions += [
       '/wd4820', # padding added after construct
@@ -17,13 +18,11 @@ endif
 
 header_c_suppressions = cc.get_supported_arguments(header_c_suppressions)
 
-test_headers_source = files('test_headers.c')
-
 test(
   'headers',
   executable(
     'test_headers',
-    test_headers_source,
+    files('test_headers.c'),
     c_args: header_c_suppressions,
     dependencies: [sratom_dep],
   ),
