--- a/test/headers/meson.build
+++ b/test/headers/meson.build
@@ -25,6 +25,7 @@ test(
     files('test_headers.c'),
     c_args: header_c_suppressions,
     dependencies: [sratom_dep],
+    implicit_include_directories: false,
   ),
   suite: 'unit',
 )
