--- a/test/meson.build
+++ b/test/meson.build
@@ -20,6 +20,7 @@ test(
     test_sratom_source,
     c_args: c_suppressions,
     dependencies: [sratom_dep, serd_dep, sord_dep],
+    implicit_include_directories: false,
   ),
   suite: 'unit',
 )
