--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,19 +1,19 @@
-# Copyright 2021-2023 David Robillard <d@drobilla.net>
+# Copyright 2021-2025 David Robillard <d@drobilla.net>
 # SPDX-License-Identifier: 0BSD OR ISC
 
-option('docs', type: 'feature', yield: true,
+option('docs', type: 'feature',
        description: 'Build documentation')
 
-option('html', type: 'feature', yield: true,
+option('html', type: 'feature',
        description: 'Build paginated HTML documentation')
 
-option('lint', type: 'boolean', value: false, yield: true,
+option('lint', type: 'boolean', value: false,
        description: 'Run code quality checks')
 
-option('singlehtml', type: 'feature', yield: true,
+option('singlehtml', type: 'feature',
        description: 'Build single-page HTML documentation')
 
-option('tests', type: 'feature', yield: true,
+option('tests', type: 'feature',
        description: 'Build tests')
 
 option('title', type: 'string', value: 'Sratom',
